# chillzone-challenge-1

./: Cargo.toml  README.md
src/: double_odd.rs  main.rs
